# colored_custom_logger

./: 404.html  DOCUMENTATION_SETUP.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  setup.py
api/: index.html
docs/: api.md  index.md  installation.md  usage.md
examples/: advanced_formatting.py  basic_usage.py  context_managers.py  customizing_log_levels.py  integration_with_existing_projects.py  logging_to_files.py  multiple_loggers.py  ss_advanced_usage.py  ss_basic_usage.py  ss_custom_color_example.py  ss_exception_logging_example.py  ss_multiple_loggers_example.py  ss_quickstart.py  ss_showcase_example.py  using_custom_colors.py
installation/: index.html
search/: search_index.json
src/colored_custom_logger/: __init__.py  logger.py
tests/: test_logger.py  test_logger.py.old
usage/: index.html
utils/: sync_build_publish.sh  sync_versions.py
